@@ -1,7 +1,11 @@
 package at.tuwien.service.impl;
 
+import at.tuwien.api.amqp.CreateUserDto;
+import at.tuwien.api.amqp.UserDetailsDto;
 import at.tuwien.api.auth.SignupRequestDto;
 import at.tuwien.api.user.*;
+import at.tuwien.auth.MariaDbPassword;
+import at.tuwien.config.AuthenticationConfig;
 import at.tuwien.entities.user.RoleType;
 import at.tuwien.entities.user.User;
 import at.tuwien.exception.*;
@@ -10,7 +14,9 @@ import at.tuwien.exception.UserNameExistsException;
 import at.tuwien.exception.UserNotFoundException;
 import at.tuwien.mapper.UserMapper;
 import at.tuwien.repositories.UserRepository;
+import at.tuwien.service.QueueService;
 import at.tuwien.service.UserService;
+import joptsimple.internal.Strings;
 import lombok.extern.log4j.Log4j2;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.DuplicateKeyException;
@@ -19,6 +25,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import javax.validation.ConstraintViolationException;
+import java.util.Arrays;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -28,14 +36,19 @@ import java.util.stream.Collectors;
 public class UserServiceImpl implements UserService {
 
     private final UserMapper userMapper;
+    private final QueueService queueService;
     private final UserRepository userRepository;
     private final PasswordEncoder passwordEncoder;
+    private final AuthenticationConfig authenticationConfig;
 
     @Autowired
-    public UserServiceImpl(UserMapper userMapper, UserRepository userRepository, PasswordEncoder passwordEncoder) {
+    public UserServiceImpl(UserMapper userMapper, QueueService queueService, UserRepository userRepository,
+                           PasswordEncoder passwordEncoder, AuthenticationConfig authenticationConfig) {
         this.userMapper = userMapper;
+        this.queueService = queueService;
         this.userRepository = userRepository;
         this.passwordEncoder = passwordEncoder;
+        this.authenticationConfig = authenticationConfig;
     }
 
     @Override
@@ -97,9 +110,16 @@ public class UserServiceImpl implements UserService {
         /* save */
         final User user = userMapper.signupRequestDtoToUser(data);
         user.setEmailVerified(false);
-        user.setRoles(List.of(RoleType.ROLE_RESEARCHER));
+        final List<RoleType> roles = new LinkedList<>(Arrays.asList(authenticationConfig.getDefaultRoles()));
+        final List<String> developers = Arrays.asList(authenticationConfig.getDeveloperUsernames());
+        if (developers.contains(data.getUsername())) {
+            log.info("Assign developer privileges to user with username {}", data.getUsername());
+            roles.add(RoleType.ROLE_DEVELOPER);
+        }
+        user.setRoles(roles);
         user.setThemeDark(false);
         user.setPassword(passwordEncoder.encode(data.getPassword()));
+        user.setDatabasePassword(MariaDbPassword.encode(data.getPassword()));
         final User entity;
         try {
             entity = userRepository.save(user);
@@ -190,7 +210,7 @@ public class UserServiceImpl implements UserService {
         try {
             user.setRoles(data.getRoles()
                     .stream()
-                    .map(RoleType::valueOf)
+                    .map(userMapper::roleTypeDtoToRoleType)
                     .collect(Collectors.toList()));
         } catch (IllegalArgumentException e) {
             log.error("Failed to map roles {}", data.getRoles());
@@ -223,16 +243,28 @@ public class UserServiceImpl implements UserService {
 
     @Override
     @Transactional
-    public User updatePassword(Long id, UserPasswordDto data) throws UserNotFoundException {
+    public User updatePassword(Long id, UserPasswordDto data) throws UserNotFoundException,
+            BrokerUserCreationException {
         /* check */
         final User user = find(id);
+        /* modify */
+        final UserDetailsDto details = queueService.findUser(user.getUsername());
+        final CreateUserDto modifyDto = userMapper.userPasswordDtoToCreateUserDto(data);
+        if (details.getTags().length > 0) {
+            final String tags = Strings.join(details.getTags(), ",");
+            log.debug("found tags, setting the tags={}", tags);
+            modifyDto.setTags(tags);
+        }
+        queueService.modifyUserPassword(user, modifyDto);
+        log.info("Updated broker service password for user with id {}", user.getId());
         /* save */
         final String passwd = passwordEncoder.encode(data.getPassword());
-        log.debug("encoded updated user password {}", passwd);
+        log.trace("encoded updated user password {}", passwd);
         user.setPassword(passwd);
+        user.setDatabasePassword(MariaDbPassword.encode(data.getPassword()));
+        log.trace("mapped password {} to updated user {}", passwd, user);
         final User entity = userRepository.save(user);
         log.info("Updated user with id {}", entity.getId());
-        log.trace("updated user {}", entity);
         return entity;
     }
 
